[package]
name = "fwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
crossterm = "0.29.0"
ctrlc = "3.4.7"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1", features = ["full"] }
